Fix broken doc links locally and make them more visible

--- a/corgi/web/static/base.css
+++ b/corgi/web/static/base.css
@@ -12,14 +12,6 @@
   color: white;
 }
 
-.padding {
-  padding: 10px 10px;
-}
-
-.paddingleft {
-  padding-left: 5px;
-}
-
 .paddingbottom {
   padding-bottom: 5px;
 }
